now with inline templates

--- a/index.html
+++ b/index.html
@@ -1,26 +1,30 @@
+
 <script type="module">
 import { Sexel } from './sexel.mjs'
-const t = Sexel.tag('foo-bar',['email','name','address'],
-	{ 'ondraw':  function(){ 
-		this.innerHTML = `
-		<table>
-		<tbody>
-		<tr><td>Name:</td><td>${ this.name() }</td></tr>
-		<tr><td>Email:</td><td>${ this.email() }</td></tr>
-		<tr><td>Address</td><td><textarea>${this.address()}</textarea></td></tr>
-		</tbody>
-		</table>
-	` }})
+const t = Sexel.tag('user-table',['email','name','address'],{
+	onclick: (e) => { console.log(e); alert('clicked')},
+})
 </script>
+
+<template id="user-table">
+<table>
+<tbody>
+<tr><td>Name:</td><td id="name"></td></tr>
+<tr><td>Email:</td><td id="email"></td></tr>
+<tr><td>Address</td><td><textarea id="address"></textarea></td></tr>
+</tbody>
+</table>
+</template>
 
 <body>
 <div id="test">
-<foo-bar id="foo" 
+<user-table id="foo" 
 	name="bob" 
 	email="bob@example.com" 
 	address="742 Evergreen Tr. 12345 Springfield Tx USA">
-</foo-bar>
+</user-table>
 </div>
 </body>
+
 
 
