Adding gitignore and sexp dependency

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ const t = Sexel.tag('user-table',['email','name','address'],{
 	email="bob@example.com" 
 	address="742 Evergreen Tr. 12345 Springfield Tx USA">
 </user-table>
+
+<user-table id="bar"></user-table>
 </div>
 </body>
 
