fixing utf-8 encoding issue that happens when it runs through s3 and cloudfront

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<html>
+<html lang="en">
 <head>
+<meta charset="utf-8"></meta>
 <title>Sexel : the sexy webcomponent framework</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.min.js" ></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
