cleaning up some HTMLisms

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8"></meta>
+<meta charset="utf-8">
 <title>Sexel : the sexy webcomponent framework</title>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.min.js" ></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/default.min.css">
@@ -193,7 +194,7 @@ at: <a href="https://github.com/cthulhuology/sexel">https://github.com/cthulhuol
 <pre>
 MIT License 
 
-Copyright (c) 2024 David J. Goehrig <dave@dloh.org> 
+Copyright (c) 2024 David J. Goehrig &lt;dave@dloh.org&gt;
 
 Permission is hereby granted, free of charge, to any person obtaining a copy 
 of this software and associated documentation files (the "Software"), to deal 
@@ -482,6 +483,5 @@ data='[
 <!-- footer -->
 <a id="a_footer"></a>
 <sexel-footer id="footer"></sexel-footer>
-</div>
 </body>
 </html>
