tweaking chart api to make it easier to do multi-dataset stuff

--- a/index.html
+++ b/index.html
@@ -10,37 +10,7 @@
 <script>hljs.highlightAll();</script>
 <script type="module" src="sexel.mjs"></script>
 <link rel="stylesheet" href="sexel.css" />
-<link rel="import" href="components/address.html" />
-<link rel="import" href="components/audio.html" />
-<link rel="import" href="components/auth.html" />
-<link rel="import" href="components/avatar.html" />
-<link rel="import" href="components/breadcrumb.html" />
-<link rel="import" href="components/button.html" />
-<link rel="import" href="components/card.html" />
-<link rel="import" href="components/carousel.html" />
-<link rel="import" href="components/chart.html" />
-<link rel="import" href="components/chat.html" />
-<link rel="import" href="components/clock.html" />
-<link rel="import" href="components/code.html" />
-<link rel="import" href="components/data.html" />
-<link rel="import" href="components/date.html" />
-<link rel="import" href="components/dialog.html" />
-<link rel="import" href="components/footer.html" />
-<link rel="import" href="components/form.html" />
-<link rel="import" href="components/grid.html" />
-<link rel="import" href="components/header.html" />
-<link rel="import" href="components/list.html" />
-<link rel="import" href="components/menu.html" />
-<link rel="import" href="components/notification.html" />
-<link rel="import" href="components/progress.html" />
-<link rel="import" href="components/rating.html" />
-<link rel="import" href="components/sidebar.html" />
-<link rel="import" href="components/slider.html" />
-<link rel="import" href="components/spinner.html" />
-<link rel="import" href="components/search.html" />
-<link rel="import" href="components/tabs.html" />
-<link rel="import" href="components/upload.html" />
-<link rel="import" href="components/video.html" />
+<link rel="import" href="components.html" />
 <script type="module">
 import {handler} from './sexel.mjs'
 handler({
