fixing image path

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ handler({
 </head>
 <body>
 <a id="a_header"></a>
-<sexel-header id="header" logo="/images/sexel.png" value="Sexel"></sexel-header>
+<sexel-header id="header" logo="images/sexel.png" value="Sexel"></sexel-header>
 
 <a id="a_grid"></a>
 <sexel-grid columns="800px 1fr 20px" rows="1fr 100px 100px" gap="40px">
